[gd_scene load_steps=5 format=3 uid="uid://hoxobtgt486a"]

[ext_resource type="Theme" uid="uid://srs1c8np6lm4" path="res://scenes/hud/hudtheme.tres" id="1_7e0ns"]
[ext_resource type="Script" path="res://scenes/hud/hud.gd" id="1_bp4ii"]

[sub_resource type="InputEventAction" id="InputEventAction_e7k1r"]
action = &"spawn"

[sub_resource type="Shortcut" id="Shortcut_8e0pg"]
events = [SubResource("InputEventAction_e7k1r")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_bp4ii")

[node name="Root" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1024.0
offset_bottom = 768.0
theme = ExtResource("1_7e0ns")

[node name="StartButton" type="Button" parent="Root"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -122.0
offset_top = -54.0
offset_right = 123.0
offset_bottom = 86.0
grow_horizontal = 2
grow_vertical = 2
shortcut = SubResource("Shortcut_8e0pg")
text = "START"

[node name="Label" type="Label" parent="Root/StartButton"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -33.5
offset_top = -35.0
offset_right = 33.5
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 20
text = "(space)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ReadyLabel" type="Label" parent="Root"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -39.5
offset_right = 20.0
offset_bottom = 39.5
grow_horizontal = 2
grow_vertical = 2
text = "Get Ready..."

[node name="EndLabel" type="Label" parent="Root"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -234.0
offset_top = 100.0
offset_right = 234.0
offset_bottom = 182.0
grow_horizontal = 2
text = "SUCKS TO SUCK"

[node name="ScoreLabel" type="Label" parent="Root"]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 79.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 45
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Root/StartButton" to="." method="_on_start_button_pressed"]
